# cashier-offline

./: ARCHITECHTURE.md  package.json  tailwind.config.ts  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/commands/: auth.rs  categories.rs  customers.rs  mod.rs  products.rs  settings.rs  sync.rs  transactions.rs  users.rs
src-tauri/src/db/: master.rs  mod.rs  transactional.rs
src-tauri/src/db/migrations/master/: V1__init.sql
src-tauri/src/db/migrations/transactional/: V1__init.sql
src-tauri/src/logger/: mod.rs
src-tauri/src/sync/: engine.rs  mapper.rs  mod.rs
src/components/layout/: Layout.tsx
src/components/ui/: index.tsx
src/lib/: tauri.ts
src/pages/: Categories.tsx  Customers.tsx  Dashboard.tsx  Login.tsx  POS.tsx  Products.tsx  Settings.tsx  Sync.tsx  Transactions.tsx  Users.tsx
src/store/: authStore.ts  cartStore.ts
